# IntelligentAssistant

./: .env  README.md  pyproject.toml
scripts/: setup.sh
src/: analyzer.py  generator.py  main.py  utils.py
