[project]
name = "intelligentassistant"
version = "0.1.0"
description = ""
authors = [
    {name = "hush-coder",email = "422997952@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "click (>=8.1.8,<9.0.0)",
    "mammoth (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
